these args are not needed anymore

--- a/src/Sandbox/AdminBundle/Resources/config/services.yml
+++ b/src/Sandbox/AdminBundle/Resources/config/services.yml
@@ -1,85 +1,71 @@
 services:
     sandbox_admin.content_controller:
         class: Sandbox\AdminBundle\Controller\ContentAdminController
-        arguments:
-            - "%symfony_cmf_content.static_basepath%"
         calls:
             - [ setContainer, [@service_container] ]
     sandbox_admin.menu_item_controller:
         class: Sandbox\AdminBundle\Controller\MenuItemAdminController
-        arguments:
-            - "%symfony_cmf_core.mainmenu_basepath%"
         calls:
             - [ setContainer, [@service_container] ]
     sandbox_admin.multilang_menu_item_controller:
         class: Sandbox\AdminBundle\Controller\MultilangMenuItemAdminController
-        arguments:
-            - "%symfony_cmf_core.mainmenu_basepath%"
         calls:
             - [ setContainer, [@service_container] ]
     sandbox_admin.multilang_language_select_route_controller:
         class: Sandbox\AdminBundle\Controller\MultilangLanguageSelectRouteAdminController
-        arguments:
-            - "%symfony_cmf_core.mainmenu_basepath%"
         calls:
             - [ setContainer, [@service_container] ]
     sandbox_admin.multilang_static_content_controller:
         class: Sandbox\AdminBundle\Controller\MultilangStaticContentAdminController
-        arguments:
-            - "%symfony_cmf_core.mainmenu_basepath%"
         calls:
             - [ setContainer, [@service_container] ]
     sandbox_admin.multilang_static_content_controller:
         class: Sandbox\AdminBundle\Controller\MultilangStaticContentAdminController
-        arguments:
-            - "%symfony_cmf_core.mainmenu_basepath%"
         calls:
             - [ setContainer, [@service_container] ]
     sandbox_admin.route_controller:
         class: Sandbox\AdminBundle\Controller\RouteAdminController
-        arguments:
-            - "%symfony_cmf_core.mainmenu_basepath%"
         calls:
             - [ setContainer, [@service_container] ]
     sandbox.admin.admin.static_editable_content:
         class: Sandbox\AdminBundle\Admin\ContentAdmin
         tags:
-            - {name: sonata.admin, manager_type: phpcr, group: phpcr, label: content}
+            - {name: sonata.admin, manager_type: doctrine_phpcr, group: phpcr, label: content}
         arguments: ["",Sandbox\MainBundle\Document\EditableStaticContent, "sandbox_admin.content_controller"]
         calls:
             - [ setRouteBuilder, [ @sonata.admin.route.path_info_slashes ] ]
     sandbox.admin.admin.menu_item:
         class: Sandbox\AdminBundle\Admin\MenuItemAdmin
         tags:
-            - {name: sonata.admin, manager_type: phpcr, group: phpcr, label: menu item}
+            - {name: sonata.admin, manager_type: doctrine_phpcr, group: phpcr, label: menu item}
         arguments: ["",Symfony\Cmf\Bundle\MenuBundle\Document\MenuItem, "sandbox_admin.menu_item_controller"]
         calls:
             - [ setRouteBuilder, [ @sonata.admin.route.path_info_slashes ] ]
     sandbox.admin.admin.multilang_menu_item:
         class: Sandbox\AdminBundle\Admin\MultilangMenuItemAdmin
         tags:
-            - {name: sonata.admin, manager_type: phpcr, group: phpcr, label: multilang menu item}
+            - {name: sonata.admin, manager_type: doctrine_phpcr, group: phpcr, label: multilang menu item}
         arguments: ["",Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangMenuItem, "sandbox_admin.multilang_menu_item_controller"]
         calls:
             - [ setRouteBuilder, [ @sonata.admin.route.path_info_slashes ] ]
     sandbox.admin.admin.multilang_language_select_route:
         class: Sandbox\AdminBundle\Admin\MultilangLanguageSelectRouteAdmin
         tags:
-            - {name: sonata.admin, manager_type: phpcr, group: phpcr, label: multilang language select route}
+            - {name: sonata.admin, manager_type: doctrine_phpcr, group: phpcr, label: multilang language select route}
         arguments: ["",Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangLanguageSelectRoute, "sandbox_admin.multilang_language_select_route_controller"]
         calls:
             - [ setRouteBuilder, [ @sonata.admin.route.path_info_slashes ] ]
     sandbox.admin.admin.multilang_static_content:
         class: Sandbox\AdminBundle\Admin\MultilangStaticContentAdmin
         tags:
-            - {name: sonata.admin, manager_type: phpcr, group: phpcr, label: multilang static content}
+            - {name: sonata.admin, manager_type: doctrine_phpcr, group: phpcr, label: multilang static content}
         arguments: ["",Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangStaticContent, "sandbox_admin.multilang_static_content_controller"]
         calls:
             - [ setRouteBuilder, [ @sonata.admin.route.path_info_slashes ] ]
     sandbox.admin.admin.route:
         class: Sandbox\AdminBundle\Admin\RouteAdmin
         tags:
-            - {name: sonata.admin, manager_type: phpcr, group: phpcr, label: route}
+            - {name: sonata.admin, manager_type: doctrine_phpcr, group: phpcr, label: route}
         arguments: ["",Symfony\Cmf\Bundle\ChainRoutingBundle\Document\Route, "sandbox_admin.route_controller"]
         calls:
             - [ setRouteBuilder, [ @sonata.admin.route.path_info_slashes ] ]
