Keeping tree state with stateless strategy :-)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -105,7 +105,7 @@ liip_vie:
 sonata_admin:
     templates:
         # default global templates
-        layout:  SonataAdminBundle::standard_layout.html.twig
+        layout:  SandboxAdminBundle::standard_layout.html.twig
         ajax:    SonataAdminBundle::ajax_layout.html.twig
         dashboard: SandboxAdminBundle::dashboard.html.twig
 
