Adapted fixtures to have more test data for blocks

--- a/src/Sandbox/MainBundle/Resources/data/fixtures/static/page.yml
+++ b/src/Sandbox/MainBundle/Resources/data/fixtures/static/page.yml
@@ -22,7 +22,7 @@ static:
                 <h2>Was nun?</h2>
                 <p>Es gibt einige bundles im Verzeichnis vendor/symfony-cmf/. Lies die README Datei im Hauptverzeichnis, und dann die README der einzelnen bundles.</p>
         blocks:
-            content:
+            additionalInfoBlock:
                 class: Symfony\Cmf\Bundle\BlockBundle\Document\ContainerBlock
                 properties:
                     title: Container with simple blocks
@@ -47,6 +47,12 @@ static:
             <p>Sonet affert an has. Nam id odio nisl eruditi. Te quo falli propriae delectus, ut animal meliore est, agam decore in sea. Prima debet fierent id sed. Usu debet paulo argumentum ex, solum homero in sed, modus laboramus et usu. Brute legendos contentiones ex pri.
 
             Ut suscipit honestatis sed, per id facer euismod probatus. Ne persius posidonium eum, has elaboraret philosophia eu. No eam wisi choro labores. Sit id oratio aperiam electram, quodsi deterruisset no eum, vel modo quaeque ei</p>
+        blocks:
+            additionalInfoBlock:
+                class: Symfony\Cmf\Bundle\BlockBundle\Document\SimpleBlock
+                properties:
+                    title: SimpleBlock on the first level
+                    content: This is a simple block.
     -
         name: "company_team"
         title: "The Team"
