--- a/src/Sandbox/MainBundle/Resources/data/fixtures/static/page.yml
+++ b/src/Sandbox/MainBundle/Resources/data/fixtures/static/page.yml
@@ -12,10 +12,10 @@ static:
                 <h2>How to proceed</h2>
                 <p>There is a couple of bundles to look into in the vendor/symfony-cmf/ folder. Look at the main README but also at the individual README files of the bundles.</p>
             fr: |
-                <h2>Bonjour pour le demo symfony cmf</h2>
-                <p>Si tu vois cette page, ça veux dire que l'installation du symfony cmf a fonctionné!</p>
-                <h2>Quoi faire maitenant?</h2>
-                <p>Il y a plusieurs bundles dans le directoire vendor/symfony-cmf/. Lis le README principal mais aussi les README individuel de chaque bundle.</p>
+                <h2>Bienvenue dans la démo de symfony cmf</h2>
+                <p>Si vous voyez cette page, c'est que l'installation de symfony cmf a fonctionné !</p>
+                <h2>Que faire maintenant ?</h2>
+                <p>Plusieurs bundles se trouvent dans le répertoire vendor/symfony-cmf/. Lisez le README principal ainsi que les README propres à chaque bundle.</p>
             de: |
                 <h2>Willkommen zur symfony cmf Demo</h2>
                 <p>Wenn du diese Seite siehst, bedeutet das dass die installation des symfony cmf erfolgreich war!</p>
