--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -102,6 +102,12 @@ liip_vie:
         'sioc:Post': 'Sandbox\MainBundle\Document\EditableStaticContent'
     use_coffee: %liip_vie.use_coffee%
 
+sonata_block:
+    default_contexts: [cms]
+    blocks:
+        sonata.admin.block.admin_list:
+            contexts:   [admin]
+
 sonata_admin:
     templates:
         # default global templates
