--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,14 +46,8 @@ swiftmailer:
 # cmf configuration
 doctrine_phpcr:
     # configure the PHPCR session
-    #session:
-    #    backend:
-    #        type: doctrinedbal
-    #        connection: doctrine.dbal.default_connection
-    #    workspace: %phpcr_workspace%
     session:
-        backend:
-            url: %phpcr_url%
+        backend: %phpcr_backend%
         workspace: %phpcr_workspace%
         username: %phpcr_user%
         password: %phpcr_pass%
