--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -8,7 +8,9 @@ parameters:
 
     secret: xxxxxxxxxx
 
-    phpcr_url: http://localhost:8080/server/
+    phpcr_backend:
+        type: jackrabbit
+        url: http://localhost:8080/server/
     phpcr_workspace: default
     phpcr_user: admin
     phpcr_pass: admin
