--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,7 +93,7 @@ knp_menu:
 liip_vie:
     phpcr_odm: true
     map:
-        'sioc:Post': 'Sandbox\MainBundle\Document\EditableStaticContent'
+        '<http://rdfs.org/sioc/ns#Post>': 'Sandbox\MainBundle\Document\EditableStaticContent'
     use_coffee: %liip_vie.use_coffee%
 
 sonata_block:
