--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -105,6 +105,7 @@ liip_vie:
     map:
         '<http://rdfs.org/sioc/ns#Post>': 'Sandbox\MainBundle\Document\EditableStaticContent'
     use_coffee: %liip_vie.use_coffee%
+    # TODO: these settings should come from the corresponding bundles, not be duplicated
     base_path: /cms/routes
     cms_path: /cms/content/static
 
