--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,7 +30,7 @@ assetic:
         coffee:
            bin: %coffee.bin%
            node: %coffee.node%
-           apply_to: "\.coffee$"
+           apply_to: %coffee.extension%
         # closure:
         #     jar: %kernel.root_dir%/java/compiler.jar
         # yui_css:
