--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -18,6 +18,9 @@ parameters:
     phpcr_pass: admin
 
     liip_vie.use_coffee: false
+    # a little hack to avoid errors on missing node/coffescript.
+    # remove -disabled if you want coffee.
+    coffee.extension: "\.coffee-disabled$"
     coffee.bin: ''
     coffee.node: ''
 
