Added example for usage of ActionBlock

--- a/src/Sandbox/MainBundle/DataFixtures/static/page.yml
+++ b/src/Sandbox/MainBundle/DataFixtures/static/page.yml
@@ -35,6 +35,9 @@ static:
                         properties:
                             title: Another SimpleBlock
                             content: This is another simple block.
+                    child3:
+                        class: Symfony\Cmf\Bundle\BlockBundle\Document\ActionBlock
+                        actionName: SandboxMainBundle:Content:block
     -
         name: "company"
         title: "The Company"
