--- a/src/Sandbox/MainBundle/DataFixtures/static/page.yml
+++ b/src/Sandbox/MainBundle/DataFixtures/static/page.yml
@@ -28,13 +28,13 @@ static:
                     child1:
                         class: Sandbox\BlockBundle\Document\EditableSimpleBlock
                         properties:
-                            title: Homepage Simpleblock
-                            content: This is a simple block on the homepage.
+                            title: Editable Simpleblock
+                            content: This is a simple block. It is stored on the homepage, but also referenced from the company page.
                     child2:
                         class: Sandbox\BlockBundle\Document\EditableSimpleBlock
                         properties:
-                            title: Another SimpleBlock
-                            content: This is another simple block.
+                            title: Another editable SimpleBlock
+                            content: Both title and content of this block are editable.
                     child3:
                         class: Symfony\Cmf\Bundle\BlockBundle\Document\ActionBlock
                         actionName: SandboxBlockBundle:Default:block
