--- a/src/Sandbox/MainBundle/DataFixtures/static/page.yml
+++ b/src/Sandbox/MainBundle/DataFixtures/static/page.yml
@@ -43,7 +43,7 @@ static:
         title: "The Company"
         content: |
             <h2>Who is behind the Symfony CMF project?</h2>
-            <p>The content management framework is a joint effort by various developpers and companies</p>
+            <p>The content management framework is a joint effort by various developers and companies</p>
             <h2>dicta facete eu vis</h2>
             <p>Sonet affert an has. Nam id odio nisl eruditi. Te quo falli propriae delectus, ut animal meliore est, agam decore in sea. Prima debet fierent id sed. Usu debet paulo argumentum ex, solum homero in sed, modus laboramus et usu. Brute legendos contentiones ex pri.
 
@@ -57,7 +57,7 @@ static:
         title: "The Team"
         content: |
             <h2>Our Team</h2>
-            <p>There are some core developpers and many other contributors. We need more help, so please contribute.</p>
+            <p>There are some core developers and many other contributors. We need more help, so please contribute.</p>
             <h2>dicta facete eu vis</h2>
             <p>Sonet affert an has. Nam id odio nisl eruditi. Te quo falli propriae delectus, ut animal meliore est, agam decore in sea. Prima debet fierent id sed. Usu debet paulo argumentum ex, solum homero in sed, modus laboramus et usu. Brute legendos contentiones ex pri.
 
