switching the sandbox to composer

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,13 +36,7 @@ assetic:
         # yui_css:
         #     jar: %kernel.root_dir%/java/yuicompressor-2.4.2.jar
 
-# Swiftmailer Configuration
-swiftmailer:
-    transport: %mailer_transport%
-    host:      %mailer_host%
-    username:  %mailer_user%
-    password:  %mailer_password%
-
+# for jackalope-doctrine-dbal
 doctrine:
     dbal:
         driver:   %database_driver%
