--- a/src/Sandbox/MainBundle/DataFixtures/static/page.yml
+++ b/src/Sandbox/MainBundle/DataFixtures/static/page.yml
@@ -3,24 +3,24 @@ static:
         name: "home"
         title:
             en: "Homepage"
-            fr: "Page principal"
+            fr: "Page principale"
             de: "Startseite"
         content:
             en: |
-                <h2>Welcome to the symfony cmf Demo</h2>
-                <p>If you see this page, it means that the symfony cmf installation is running successfully!</p>
+                <h2>Welcome to the Symfony CMF Demo</h2>
+                <p>If you see this page, it means that the Symfony CMF installation is running successfully!</p>
                 <h2>How to proceed</h2>
                 <p>There is a couple of bundles to look into in the vendor/symfony-cmf/ folder. Look at the main README but also at the individual README files of the bundles.</p>
             fr: |
-                <h2>Bienvenue dans la démo de symfony cmf</h2>
-                <p>Si vous voyez cette page, c'est que l'installation de symfony cmf a fonctionné !</p>
+                <h2>Bienvenue dans la démo de Symfony CMF</h2>
+                <p>Si vous voyez cette page, c'est que l'installation de Symfony CMF a fonctionné !</p>
                 <h2>Que faire maintenant ?</h2>
                 <p>Plusieurs bundles se trouvent dans le répertoire vendor/symfony-cmf/. Lisez le README principal ainsi que les README propres à chaque bundle.</p>
             de: |
-                <h2>Willkommen zur symfony cmf Demo</h2>
-                <p>Wenn du diese Seite siehst, bedeutet das dass die installation des symfony cmf erfolgreich war!</p>
+                <h2>Willkommen zur Symfony CMF Demo</h2>
+                <p>Wenn du diese Seite siehst, bedeutet das dass die Installation des Symfony CMF erfolgreich war!</p>
                 <h2>Was nun?</h2>
-                <p>Es gibt einige bundles im Verzeichnis vendor/symfony-cmf/. Lies die README Datei im Hauptverzeichnis, und dann die README der einzelnen bundles.</p>
+                <p>Es gibt einige Bundles im Verzeichnis vendor/symfony-cmf/. Lies die README Datei im Hauptverzeichnis, und dann die README der einzelnen Bundles.</p>
         blocks:
             additionalInfoBlock:
                 class: Symfony\Cmf\Bundle\BlockBundle\Document\ContainerBlock
