--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/monolog-bundle": "dev-master",
         "sensio/distribution-bundle": "dev-master",
         "symfony-cmf/symfony-cmf": "dev-master",
+        "symfony-cmf/simple-cms-bundle": "dev-master",
         "jackalope/jackalope-jackrabbit": "dev-master",
         "jackalope/jackalope-doctrine-dbal": "dev-master",
         "doctrine/doctrine-bundle": "dev-master",
