attempt to get the test running again ..
menu is somehow broken now (@Stof, @dbu ?)

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "jackalope/jackalope-doctrine-dbal": "dev-master",
         "doctrine/doctrine-bundle": "dev-master",
         "doctrine/data-fixtures": "dev-master",
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
         "liip/vie-bundle": "dev-master",
         "liip/functional-test-bundle": "dev-master",
         "sonata-project/doctrine-phpcr-admin-bundle": "dev-master"
