use sandbox_test workspace

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - curl -s http://getcomposer.org/installer | php --
   - php composer.phar install --dev
   - ./vendor/jackalope/jackalope-jackrabbit/bin/jackrabbit.sh
-  - php app/console doctrine:phpcr:workspace:create sandbox
+  - php app/console doctrine:phpcr:workspace:create sandbox_test
   - app/console doctrine:phpcr:register-system-node-types
 
 script: phpunit -c app
