--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -11,7 +11,7 @@
     processIsolation="false"
     stopOnFailure="false"
     syntaxCheck="false"
-    bootstrap="autoload.php"
+    bootstrap="tests/bootstrap.php"
 >
 
     <testsuites>
