In development setups and as suggestion we should also have the Midgard2 PHPCR provider

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,12 @@
         "liip/functional-test-bundle": "dev-master",
         "sonata-project/doctrine-phpcr-admin-bundle": "dev-master"
     },
+    "suggest": {
+        "midgard/phpcr": "dev-master"
+    },
+    "require-dev": {
+        "midgard/phpcr": "dev-master"
+    },
     "scripts": {
         "post-install-cmd": [
             "Liip\\VieBundle\\Composer\\ScriptHandler::initSubmodules",
