Nicer-looking DB parameters

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -11,10 +11,10 @@ parameters:
         #connection: doctrine.dbal.default_connection
         # Midgard2 configs
         #type: midgard2
-        #dbtype: SQLite
-        #dbname: cmf
-        #dbdir: /tmp
-        #dbinit: true
+        #db_type: SQLite
+        #db_name: cmf
+        #db_dir: /tmp
+        #db_init: true
         #blobdir: /tmp/cmf-blobs
     phpcr_workspace: sandbox
     # With Midgard2, use
