--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,17 @@ env:
   - TRANSPORT=jackrabbit
   - TRANSPORT=midgard_sqlite
   - TRANSPORT=midgard_mysql
+  - TRANSPORT=doctrine_dbal
 
 before_script:
   - curl -s http://getcomposer.org/installer | php --
+  - php composer.phar update
+  - cp app/config/phpcr_${TRANSPORT}.yml.dist app/config/phpcr.yml
+  - cp app/config/parameters.yml.dist app/config/parameters.yml
   - ./app/tests/travis_${TRANSPORT}.sh
+  - app/console doctrine:phpcr:workspace:create sandbox_test -e=test
   - app/console doctrine:phpcr:register-system-node-types -e=test
+
 
 script: phpunit -c app
 
