use rootNode for phpcr tree
use the rootNode option of the phpcrbrowsertree for the navigation tree in the admin and for selecting content in the route admin

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -115,6 +115,8 @@ sonata_block:
         sonata.admin.block.admin_list:
             contexts:   [admin]
         sonata_admin_doctrine_phpcr.tree_block:
+            settings:
+                id: '/cms'
             contexts:   [admin]
 
 sonata_admin:
