--- a/app/config/phpcr_midgard_mysql.yml.dist
+++ b/app/config/phpcr_midgard_mysql.yml.dist
@@ -14,6 +14,7 @@ parameters:
         db_init: true
         blobdir: /tmp/cmf-blobs
     phpcr_workspace: sandbox
+    phpcr_workspace: default
     phpcr_user: admin
     phpcr_pass: password
 
