--- a/app/config/phpcr_midgard_sqlite.yml.dist
+++ b/app/config/phpcr_midgard_sqlite.yml.dist
@@ -11,6 +11,7 @@ parameters:
         db_init: true
         blobdir: /tmp/cmf-blobs
     phpcr_workspace: sandbox
+    phpcr_workspace: default
     phpcr_user: admin
     phpcr_pass: password
 
