sigh .. lets use default everywhere

--- a/app/config/phpcr_jackrabbit.yml.dist
+++ b/app/config/phpcr_jackrabbit.yml.dist
@@ -2,6 +2,6 @@ parameters:
     phpcr_backend:
         type: jackrabbit
         url: http://localhost:8080/server/
-    phpcr_workspace: sandbox
+    phpcr_workspace: default
     phpcr_user: admin
     phpcr_pass: admin
