--- a/app/config/phpcr_doctrine_dbal.yml.dist
+++ b/app/config/phpcr_doctrine_dbal.yml.dist
@@ -2,6 +2,6 @@ parameters:
     phpcr_backend:
         type: doctrinedbal
         connection: doctrine.dbal.default_connection
-    phpcr_workspace: sandbox
+    phpcr_workspace: default
     phpcr_user: admin
     phpcr_pass: admin
