Gitignore is now more inline with sf-standard distro, files such as nbproject (netbeans project) shoud be in a user's personal .gitignore rather than a project's (since 1% of users use nb)

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,7 @@ app/logs/*
 build/
 vendor/
 app/config/parameters.yml
-nbproject
-.idea
-vagrant/.vagrant
-.DS_Store
-
-jackrabbit/
-
 app/config/phpcr.yml
+jackrabbit/
+vagrant/.vagrant
+app/bootstrap.php.cache
